<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.djung.locally.View.Activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=" "
        android:id="@+id/text_view_username_label"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:id="@+id/edit_text_username"
        android:layout_below="@+id/text_view_username_label"
        android:layout_centerHorizontal="true"
        android:hint="Username"
        android:textSize="16sp"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=" "
        android:id="@+id/text_view_username_message"
        android:layout_below="@+id/edit_text_username"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" "
        android:id="@+id/text_view_password_label"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_view_username_message" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/edit_text_password"
        android:layout_below="@+id/text_view_password_label"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:hint="Password"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=" "
        android:id="@+id/text_view_password_message"
        android:layout_below="@+id/edit_text_password"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_vertical_spacing"
        android:layout_below="@+id/text_view_password_message"
        android:layout_centerHorizontal="true"
        android:id="@+id/space4" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textAllCaps="false"
        android:id="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/space4"
        android:backgroundTint="@android:color/white"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_vertical_spacing"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:id="@+id/space5" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_vertical_spacing"
        android:layout_below="@+id/space5"
        android:layout_centerHorizontal="true"
        android:id="@+id/space6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Forgot password"
        android:textSize="15dp"
        android:id="@+id/text_view_forgot_password"
        android:clickable="true"
        android:layout_below="@+id/space6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Sign up"
        android:textSize="15dp"
        android:id="@+id/text_view_signup"
        android:clickable="true"
        android:layout_below="@+id/space6"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
