...
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_save_vendor_list"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_save" />
</android.support.design.widget.CoordinatorLayout>

