<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.djung.locally.View.Activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_text_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Fill in the following fields"
        android:id="@+id/text_view_reg_message"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="32dp" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/edit_text_reg_username"
        android:hint="Username"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_view_reg_message"
        android:maxLength="128"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/field_text_small"
        android:text=""
        android:textColor="@color/alert"
        android:id="@+id/text_view_reg_username_message"
        android:layout_below="@id/edit_text_reg_username"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/edit_text_reg_password"
        android:layout_below="@+id/edit_text_reg_username"
        android:layout_centerHorizontal="true"
        android:hint="Password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/field_text_small"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/text_view_reg_password_message"
        android:layout_below="@id/edit_text_reg_password"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:id="@+id/spinner_market_name"
        android:layout_below="@id/text_view_reg_password_message">
    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/field_text_small"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/spinner_market_name_message"
        android:layout_below="@id/spinner_market_name"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/edit_text_reg_vendor_name"
        android:layout_below="@id/spinner_market_name_message"
        android:layout_centerHorizontal="true"
        android:hint="Vendor Name"
        android:inputType="textPersonName"
        android:maxLength="128"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/field_text_small"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/text_view_reg_vendor_name_message"
        android:layout_below="@+id/edit_text_reg_vendor_name"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/edit_text_reg_email"
        android:layout_below="@id/text_view_reg_vendor_name_message"
        android:layout_centerHorizontal="true"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:maxLength="128"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/field_text_small"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/text_view_reg_email_message"
        android:layout_below="@id/edit_text_reg_email"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_text_height"
        android:paddingLeft="@dimen/activity_text_padding"
        android:paddingRight="@dimen/activity_text_padding"
        android:id="@+id/edit_text_reg_phone"
        android:layout_below="@id/text_view_reg_email_message"
        android:layout_centerHorizontal="true"
        android:hint="Phone number"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="14"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="@dimen/field_text_small"
        android:text=" "
        android:textColor="@color/alert"
        android:id="@+id/text_view_reg_phone_message"
        android:layout_below="@id/edit_text_reg_phone"
        android:layout_centerHorizontal="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_intra_group_separation"
        android:layout_below="@id/text_view_reg_phone_message"
        android:id="@+id/space_about_2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_button_height"
        android:text="Sign up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/field_text_small"
        android:id="@+id/button_reg_signup"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/space_about_2" />

</RelativeLayout>
</android.support.v4.widget.NestedScrollView>
